# orion--cli-assistant

./: .gitignore  README.md  config.py  conftest.py  install.sh  main.py  orion-dev-plan.md  project_overview.md  pyproject.toml  test_undo_1.txt
core/: agent.py  context.py  streaming.py  trace_logging.py
docs/: audit_v1.md  code_walkthrough.md  polish.md  project_overview.md
docs/superpowers/plans/: 2026-04-11-cloud-only-runtime-migration.md  onboarding.md  src_laout.md  token_saving_plan.md
memory/: db.py  embeddings.py  extractor.py  indexer.py  retrieval.py  store.py
safety/: boundaries.py  confirm.py
src/orion/: __init__.py  config.py  main.py
src/orion/core/: __init__.py  agent.py  context.py  model_fallback.py  streaming.py  trace_logging.py
src/orion/memory/: __init__.py  db.py  embeddings.py  indexer.py  retrieval.py  store.py
src/orion/safety/: __init__.py  boundaries.py  confirm.py
src/orion/tools/: __init__.py  browser.py  files.py  media.py  memory_tool.py  search.py  shell.py
src/orion/ui/: __init__.py  input.py  onboarding.py  renderer.py  slash.py  spinner.py  startup.py
tests/: conftest.py  test_agent.py  test_boundaries.py  test_config.py  test_core_agent.py  test_core_context.py  test_core_model_fallback.py  test_core_streaming.py  test_inference.py  test_integration.py  test_main.py  test_memory_db.py  test_memory_embeddings.py  test_memory_extractor.py  test_memory_indexer.py  test_memory_retrieval.py  test_memory_store.py  test_onboarding_logic.py  test_renderer.py  test_safety_boundaries.py  test_safety_confirm.py  test_slash.py  test_spinner.py  test_startup.py  test_tools_browser.py  test_tools_files.py  test_tools_media.py  test_tools_search.py  test_tools_shell.py  test_trace_logging.py  test_ui_primitives.py  test_ui_slash.py
tools/: browser.py  files.py  media.py  memory_tool.py  search.py  shell.py
ui/: input.py  renderer.py  slash.py  spinner.py  startup.py
