[project]
name = "cli-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "prompt-toolkit>=3.0.52",
    "pydantic-ai>=1.78.0",
    "rich>=14.3.3",
    "sqlite-vec>=0.1.9",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath   = ["."]
