[project]
name = "cli-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.13.0",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "playwright>=1.58.0",
    "prompt-toolkit>=3.0.52",
    "pydantic-ai>=0.2",
    "rich>=14.3.3",
    "sqlite-vec>=0.1.9",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath   = ["."]
